--- a/shopping-list-starter/index.html
+++ b/shopping-list-starter/index.html
@@ -27,6 +27,12 @@
                             id="new-item-button"
                             type="button"
                             value="Submit"
+                            onclick="addItem()"/>
+                        <input
+                            id="clear-list-button"
+                            type="button"
+                            value="Clear"
+                            onclick="clearList()" 
                         />
                     </div>
                 </div>
